--- a/customer-service/pom.xml
+++ b/customer-service/pom.xml
@@ -10,6 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>customer-service</artifactId>
-
+    <version>${revision}</version>
+    <packaging>jar</packaging>
 
 </project>
