--- a/pom.xml
+++ b/pom.xml
@@ -6,12 +6,12 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.5.6</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath/>
 	</parent>
 	<groupId>com.mycompany.app</groupId>
 	<artifactId>microservices</artifactId>
 	<packaging>pom</packaging>
-	<version>${revision}</version>
+	<version>0.0.1-SNAPSHOT</version>
 	<name>microservices</name>
 	<description>Microservices demo project</description>
 
@@ -21,11 +21,10 @@
 	</properties>
 
 	<modules>
+		<module>order-service</module>
 		<module>product-service</module>
 		<module>customer-service</module>
-		<module>order-service</module>
 		<module>supplier-service</module>
-		<module>customer-service</module>
 	</modules>
 
 	<dependencies>
