--- a/product-service/pom.xml
+++ b/product-service/pom.xml
@@ -10,6 +10,6 @@
     </parent>
 
     <artifactId>product-service</artifactId>
-    <version>${revision}</version>
+    <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 </project>
