--- a/supplier-service/src/main/resources/application.properties
+++ b/supplier-service/src/main/resources/application.properties
@@ -9,5 +9,5 @@ spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.default_schema=rogova2
 
-spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
+spring.liquibase.change-log=classpath:supplier-db/changelog/db.changelog-master.xml
 spring.liquibase.default-schema = rogova2
