--- a/order-service/order-service-db/pom.xml
+++ b/order-service/order-service-db/pom.xml
@@ -11,5 +11,16 @@
 
     <artifactId>order-service-db</artifactId>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <classifier>exec</classifier>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
