--- a/product-service/product-service-db/pom.xml
+++ b/product-service/product-service-db/pom.xml
@@ -11,5 +11,15 @@
 
     <artifactId>product-service-db</artifactId>
 
-
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <classifier>exec</classifier>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
