--- a/supplier-service/supplier-service-domain/pom.xml
+++ b/supplier-service/supplier-service-domain/pom.xml
@@ -11,5 +11,15 @@
 
     <artifactId>supplier-service-domain</artifactId>
 
-
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <classifier>exec</classifier>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
