--- a/customer-service/customer-service-db/pom.xml
+++ b/customer-service/customer-service-db/pom.xml
@@ -10,17 +10,6 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>customer-service-db</artifactId>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-                <configuration>
-                    <classifier>exec</classifier>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
-
+    <version>0.0.1-SNAPSHOT</version>
+    <packaging>jar</packaging>
 </project>
