Openfeign clients added, pom.xml edited, new db schema for each service

--- a/order-service/order-service-impl/src/main/resources/application.properties
+++ b/order-service/order-service-impl/src/main/resources/application.properties
@@ -7,7 +7,9 @@ spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
 
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto=none
-spring.jpa.properties.hibernate.default_schema=rogova2
+spring.jpa.properties.hibernate.default_schema=orders
 
 spring.liquibase.change-log=classpath:order-db/changelog/db.changelog-master.xml
-spring.liquibase.default-schema = rogova2
+spring.liquibase.default-schema = orders
+
+server.port = 8800
