--- a/product-service/product-service-impl/src/main/resources/application.properties
+++ b/product-service/product-service-impl/src/main/resources/application.properties
@@ -7,7 +7,9 @@ spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
 
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto=none
-spring.jpa.properties.hibernate.default_schema=rogova2
+spring.jpa.properties.hibernate.default_schema=products
 
 spring.liquibase.change-log=classpath:product-db/changelog/db.changelog-master.xml
-spring.liquibase.default-schema = rogova2
+spring.liquibase.default-schema = products
+
+server.port = 8810
