--- a/customer-service/customer-service-impl/src/main/resources/application.properties
+++ b/customer-service/customer-service-impl/src/main/resources/application.properties
@@ -7,7 +7,9 @@ spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
 
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto=none
-spring.jpa.properties.hibernate.default_schema=rogova2
+spring.jpa.properties.hibernate.default_schema=customers
 
 spring.liquibase.change-log=classpath:customer-db/changelog/db.changelog-master.xml
-spring.liquibase.default-schema = rogova2
+spring.liquibase.default-schema = customers
+
+server.port = 8820
