--- a/product-service/product-service-db/pom.xml
+++ b/product-service/product-service-db/pom.xml
@@ -10,4 +10,10 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>product-service-db</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>org.liquibase</groupId>
+            <artifactId>liquibase-core</artifactId>
+        </dependency>
+    </dependencies>
 </project>
