--- a/supplier-service/supplier-service-impl/src/main/resources/application.properties
+++ b/supplier-service/supplier-service-impl/src/main/resources/application.properties
@@ -7,7 +7,9 @@ spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
 
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto=none
-spring.jpa.properties.hibernate.default_schema=rogova2
+spring.jpa.properties.hibernate.default_schema=suppliers
 
 spring.liquibase.change-log=classpath:supplier-db/changelog/db.changelog-master.xml
-spring.liquibase.default-schema = rogova2
+spring.liquibase.default-schema = suppliers
+
+server.port = 8830
